# marlin-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
deploy/: marlin-2b-mlx-8bit.card.md  modal_app.py
skills/video-search/: SKILL.md
skills/video-understanding/: SKILL.md
src/marlin/: __init__.py  auth.py  backend.py  chunker.py  cli.py  config.py  contract.py  daemon.py  engines.py  indexer.py  ingest.py  jobs.py  logging.py  output.py  search.py  trimmer.py  video_processor.py  visualizer.py
src/marlin/templates/: view
tests/: fixtures.py  test_contract.py  test_video_processor.py  test_visualizer.py
