[project]
name = "nemostation"
version = "0.1.2"
description = "Find moments in your videos. Agent-first CLI for Marlin-2B: dense captioning + temporal grounding, local or hosted."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "openai>=1.40",
    "lancedb>=0.15",
    "pyarrow>=17.0",
    "sentence-transformers>=3.0",
    "yt-dlp>=2024.8.6",
]

[project.optional-dependencies]
stt = ["faster-whisper>=1.0"]

[project.scripts]
marlin = "marlin.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marlin"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "marlin/skills"
