[project]
name = "nemostation"
version = "0.1.23"
description = "Find moments in your videos. Agent-first CLI for Marlin-2B: dense captioning + temporal grounding, local or hosted."
readme = "README.md"
requires-python = ">=3.10"
# Core install = caption + find only. Light: no torch, no lancedb.
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "openai>=1.40",
]

[project.optional-dependencies]
# Experimental folder index/search (hidden verbs) — heavy: pulls torch via
# sentence-transformers, plus lancedb/pyarrow and yt-dlp for URL/folder ingest.
index = [
    "lancedb>=0.15",
    "pyarrow>=17.0",
    "sentence-transformers>=3.0",
    "yt-dlp>=2024.8.6",
]
stt = ["faster-whisper>=1.0"]
dev = [
    "pre-commit>=3.8",
    "ruff>=0.6",
]

[project.scripts]
marlin = "marlin.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marlin"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "marlin/skills"

[tool.ruff]
line-length = 100
src = ["src", "tests", "deploy"]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",
    "D",
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    # Typer command declarations intentionally call Option/Argument in defaults.
    "B008",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
